--- a/all.css
+++ b/all.css
@@ -1,4 +1,6 @@
 .button {
+    border-radius 10px;
+    margin: 10px;
     background-color: blueviolet;
     border: 1px solid: black;
     font: Times New Roman;
@@ -13,7 +15,7 @@ body {
 }
 
 header {
-    background-color: lightsalmon;
+    background-color: lightblue;
 }
 
 div.menu{
