--- a/all.css
+++ b/all.css
@@ -1,13 +1,19 @@
 .button {
     border-radius: 10px;
     margin: 10px;
-    background-color: blueviolet;
+    background-color: lightseagreen;
     border: 1px; solid: black;
     font-family: "Times New Roman";
     font-size: 15px;
+    -webkit-user-select: auto;
+    touch-action: auto;
     display: inline-block;
     min-height: 50px;
     min-width: 20px;
+}
+
+.button:hover {
+    box-shadow: aliceblue;
 }
 
 body {
