--- a/all.css
+++ b/all.css
@@ -10,7 +10,7 @@
     display: inline-block;
     min-height: 50px;
     min-width: 20px;
-    position: absolute;
+    position: relative;
 }
 
 .button:hover {
@@ -26,14 +26,14 @@ header {
 }
 
 div.menu{
-    position: absolute;
+    position: relative;
     display: inline-block;
     padding: 10px;
     margin: 15px;
 }
 
 div.trololo{
-    position: absolute;
+    position: relative;
 }
 
 div.about-description{
